# fussweg-datentools.cpp

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_osx.cmake  CMakeLists_x64.cmake  CMakePresets.json  README.md  build.sh  vcpkg.json
.github/workflows/: build.yaml  build.yml
cmake/: CMakeLists_osx.cmake  CMakeLists_x64.cmake
contrib/csv-parser-cmake/: CMakeLists.txt
contrib/googletest-cmake/: CMakeLists.txt
contrib/sqlite-amalgamation-cmake/: CMakeLists.txt
include/: annot.hpp  config.h.in  crs.hpp  cv.hpp  exif.hpp  exif_json.hpp  exif_ser.hpp  exif_serde.hpp  file_iter.hpp  gis.hpp  ibox.hpp  img.hpp  optical_flow.hpp  path_finder.hpp  pov.hpp  utils.hpp  via.hpp
scripts/: common_func.sh  csvparser_build.sh  exiv2_build.sh  libpng_build.sh  opencv_build.sh  zlibng_build.sh
src/: annot.cpp  crs.cpp  cv.cpp  exif.cpp  exif.hpp  exif_json.cpp  exif_ser.cpp  exif_serde.cpp  file_iter.cpp  gis.cpp  ibox.cpp  ibox_via.cpp  img.cpp  main.cpp  optical_flow.cpp  path_finder.cpp  pov.cpp  via.cpp
tests/: test_annot.cpp  test_crs.cpp  test_exif.cpp  test_gis.cpp  test_ibox.cpp  test_main.cpp
